[gd_scene load_steps=3 format=2]

[ext_resource path="res://audio/som/reverse1.ogg" type="AudioStream" id=1]
[ext_resource path="res://scripts/Level Manager.gd" type="Script" id=2]

[node name="Level Manager" type="Node"]
script = ExtResource( 2 )

[node name="sfx_end_of_level" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="timer_end_of_level" type="Timer" parent="sfx_end_of_level"]
wait_time = 3.5
one_shot = true

[node name="sfx_start_of_level" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="timeout" from="sfx_end_of_level/timer_end_of_level" to="." method="_on_timer_end_of_level_timeout"]
